# routes/API/Features/index.js
@@ -5,7 +5,7 @@ import GenerateFakeIdentityRoutes from "./GenerateFakeIdentity/index.js";
 import InformationCrawlerFromFirstLastNameRoutes from "./InformationCrawlerFromFirstLastName/index.js";
 import PasswordCheckRoutes from "./PasswordCheck/index.js";
 import PhishingServiceRoutes from "./PhishingService/index.js";
-import RandomImageChangeRoutes from "./RandomImageChange/index.js";
+import RandomImagePersonRoutes from "./RandomImageGenerator/index.js";
 import RetrieveDomainsSubdomainsFromDomainNameRoutes from "./RetrieveDomainsSubdomainsFromDomainName/index.js";
 import SecurePasswordGeneratorRoutes from "./SecurePasswordGenerator/index.js";
 import DdosRoutes from "./Ddos/index.js";
@@ -19,7 +19,7 @@ router.use('/generate-fake-identity', GenerateFakeIdentityRoutes);
 router.use('/crawler', InformationCrawlerFromFirstLastNameRoutes);
 router.use('/password-check', PasswordCheckRoutes);
 router.use('/phishing-service', PhishingServiceRoutes);
-router.use('/random-image-change', RandomImageChangeRoutes);
+router.use('/random-image-person', RandomImagePersonRoutes);
 router.use('/retrieve-all-domains', RetrieveDomainsSubdomainsFromDomainNameRoutes);
 router.use('/secure-password-generator', SecurePasswordGeneratorRoutes);
 router.use('/ddos', DdosRoutes);
